# caleb-university-marketplace

./: .env.example  .gitignore  Login Details.rtf  PRD_Caleb_Marketplace.md  README.md  app.py  chapter1,2.3 draft.docx  config.py  pyproject.toml  requirements.txt  seed_demo.py
.claude/: launch.json  settings.local.json
.streamlit/: config.toml
components/: auth_gate.py  theme.py  ui.py
models/: db_models.py  schemas.py
pages/: admin_categories.py  admin_orders.py  admin_users.py  browse.py  cart.py  listing_editor.py  login.py  my_listings.py  my_orders.py  product_detail.py  profile.py  register.py  verify.py
services/: admin.py  auth.py  catalog.py  db.py  email.py  errors.py  orders.py  security.py  telemetry.py  users.py
tests/: conftest.py  test_auth.py  test_catalog.py  test_orders.py  test_pages_interactions.py  test_pages_smoke.py
