[project]
name = "caleb-marketplace"
version = "1.0.0"
description = "Secure web-based C2C e-commerce platform for verified Caleb University students"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
